# codeindex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  codeindex.yaml  pyproject.toml
.codex/: gsd-file-manifest.json
.codex/agents/: gsd-debugger.toml  gsd-executor.toml  gsd-phase-researcher.toml  gsd-plan-checker.toml  gsd-planner.toml  gsd-project-researcher.toml  gsd-research-synthesizer.toml  gsd-roadmapper.toml  gsd-verifier.toml
.codex/skills/mem-search/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-security-and-policy-foundation/: 01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VALIDATION.md  01-VERIFICATION.md  02-PLAN.md  02-SUMMARY.md
.planning/phases/02-capability-resilience/: 01-PLAN.md  01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
codeindex/: __init__.py  analysis.py  cli.py  config.py  embedding.py  indexer.py  memory_capture.py  memory_config.py  memory_hooks.py  memory_injection.py  memory_models.py  memory_search.py  memory_service.py  memory_storage.py  memory_viewer.py  memory_worker.py  search.py  server.py  storage.py
docs/: IMPROVEMENTS.md  codeindex.example.yaml  enhancement_plan.md  mcp_tree_sitter_integration.md  visualization.md
tests/: test_cli.py  test_memory_storage.py  test_server.py
