[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeindex-sync"
version = "0.1.0"
description = "Local-first code indexing and semantic retrieval"
requires-python = ">=3.10"

[project.scripts]
codeindex = "codeindex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
