[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeindex-sync"
version = "0.0.4"
description = "Local, privacy-first Search Engine and Memory layer for codebases with native MCP support"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "aiosqlite>=0.19.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]

[project.optional-dependencies]
analysis = [
  "tree-sitter-languages>=1.10.2",
]
vectors = [
  "sqlite-vec>=0.1.6",
]
advanced = [
  "fastembed>=0.2.0",
  "rank-bm25>=0.2.2",
]

[project.scripts]
codeindex = "codeindex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["codeindex*"]
